Fix the text overflow(#186)

--- a/src/editor/components/nodes/StickyNoteNode.css
+++ b/src/editor/components/nodes/StickyNoteNode.css
@@ -2,5 +2,14 @@
   background: hsla(240, 5%, 96%, 0.78) !important;
   border-style: solid;
   border-width: 1px;
-  padding: 5px;
+}
+
+.react-flow__node-stickyNote .node__body {
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+}
+
+.react-flow__node-stickyNote .stickyNote__node__body--enabled {
+  min-width: 120px;
+  min-height: 120px;
 }
